@@ -1,5 +1,6 @@
 0.08
  - Fix Changelog file.
+ - Update Module::Install to 1.21 version.
  - Update author github username.
 
 0.07 2017-11-22T08:40:52+01:00
